core/tests/spec/snapshots/blocks/verbatim-block/verbatim-block-precedence.snap
---
source: core/tests/runner/mod.rs
info: "Test 'verbatim-block-precedence' from: markup\\blocks\\verbatim-block.yml"
---
VerbatimBlock(# no heading)
---
With input:

```
# no heading
```


